--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,13 @@ android {
 
     defaultConfig {
         applicationId "com.example.anticafe"
-        minSdk 21
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
+
+        // RAWG API Key
+        buildConfigField "String", "RAWG_API_KEY", "\"3ab80a416c614edcabcfe4eb78c435e0\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,8 +38,18 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //implementation 'com.jakewharton:butterknife:8.8.1'
-    //annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // Gson
+    // https://github.com/google/gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Glide
+    // https://github.com/bumptech/glide
+    //implementation 'com.github.bumptech.glide:glide:4.10.0'
+    //kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -53,4 +66,6 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+
+    implementation 'com.ekn.gruzer.rawg:rawgapiwrapper:0.1.0'
 }
