--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
 
     implementation 'com.ekn.gruzer.rawg:rawgapiwrapper:0.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
 }
